# HotdogNotHotdog

./: .gitignore  README.md
training/: dataset.py  finetune.py  model.py  pyproject.toml  transforms.py
