[tool.poetry]
name = "training"
version = "0.1.0"
description = "Training code for HotdogNotDog"
authors = ["Nicholas Witthoeft <njwitthoeft@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.1"
torchvision = "^0.15.2"
typer = "^0.9.0"
kaggle = "^1.5.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
